nearly done with index

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@
 
 # Site settings
 title: Yoonyoung Cho
-email: yoonyoung.cho@students.olin.edu 
+email: yoonyoung.cho@students.olin.edu
+gmail: jchocholate@gmail.com
 address: 1000 Olin Way, Needham, Ma
 phone: (+1) 213-220-3492
 description: > # this means to ignore newlines until "baseurl:"
