--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,9 @@ gmail: jchocholate@gmail.com
 address: 1000 Olin Way, Needham, Ma
 phone: (+1) 213-220-3492
 description: > # this means to ignore newlines until "baseurl:"
-    Yoonyoung Cho's Portfolio Page
+    Yoonyoung Cho's Portfolio Page <br/>
+    Robotics Software Engineer <br/>
+    Olin College | Class of 2019 <br/>
 baseurl: "" # the subpath of your site, e.g. /blog
 github_username: yycho0108
 # Build settings
