--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@
 
 # Site settings
 title: Yoonyoung Cho
-email: yoonyoung.cho@students.olin.edu
+email: yoonyoung.cho@kaist.ac.kr
 gmail: jchocholate@gmail.com
-address: 1000 Olin Way, Needham, Ma
+address: 85 Hoegi-Ro, Seoul, South Korea
 phone: (+1) 213-220-3492
 description: > # this means to ignore newlines until "baseurl:"
     Yoonyoung Cho's Portfolio Page <br/>
-    Robotics Software Engineer <br/>
-    Olin College | Class of 2019 <br/>
+    Robotics/AI Ph.D Candidate <br/>
+    KAIST Graduate School of AI <br/>
 baseurl: "" # the subpath of your site, e.g. /blog
 github_username: yycho0108
 # Build settings
